# synthesis

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
borst/: CMakeLists.txt  TestPresenter.h  main.cpp
borst/Source/: TestPresenter.cpp
lib/: CMakeLists.txt
pixelsort/: CMakeLists.txt  TestPresenter.h  main.cpp
pixelsort/Source/: TestPresenter.cpp
resources/shaders/: Compute.comp  Sampler.frag
synthesis/: CMakeLists.txt  TestPresenter.h  main.cpp
synthesis/Source/: TestPresenter.cpp
